<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oasis Granger</string>
    <string name="menu_item_podcast">Podcast</string>
    <string name="menu_item_calendar">Calendar</string>
    <string name="menu_item_aboutus">About Us</string>
    <string name="podcast_json_url">http://json-podcast.oasisgranger.com/</string>
    <string name="menu_item_share">Share</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="podcast_notification_title">Oasis Granger Podcast</string>
    <string name="pause">Pause</string>
    <string name="blank_total_time"> / 00:00:00</string>

</resources>